# miniserde

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: bench.rs
derive/: Cargo.toml
derive-venial/: Cargo.toml
derive-venial/src/: attr.rs  bound.rs  de.rs  lib.rs  ser.rs
derive/src/: attr.rs  bound.rs  de.rs  fallback.rs  lib.rs  ser.rs
src/: careful.rs  error.rs  export.rs  ignore.rs  lib.rs  place.rs  ptr.rs
src/de/: impls.rs  mod.rs
src/json/: array.rs  de.rs  drop.rs  mod.rs  number.rs  object.rs  ser.rs  value.rs
src/ser/: impls.rs  mod.rs
tests/: regression.rs  test_derive.rs  test_impls.rs  test_nested.rs  test_number.rs  test_value.rs  test_venial.rs
tests/crate/: Cargo.toml  test.rs
tests/regression/: issue24.rs  issue9.rs
tests/ui/: attr-duplicate.rs  attr-duplicate.stderr  attr-unsupported.rs  attr-unsupported.stderr  de-enum-data.rs  de-enum-data.stderr  de-enum-generic.rs  de-enum-generic.stderr  de-tuple-struct.rs  de-tuple-struct.stderr  de-union.rs  de-union.stderr  de-unit-struct.rs  de-unit-struct.stderr  ser-enum-data.rs  ser-enum-data.stderr  ser-enum-generic.rs  ser-enum-generic.stderr  ser-tuple-struct.rs  ser-tuple-struct.stderr  ser-union.rs  ser-union.stderr  ser-unit-struct.rs  ser-unit-struct.stderr
