[package]
name = "miniserde"
version = "0.1.39"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "no-std"]
description = "Data structure serialization library with several opposite design goals from Serde."
documentation = "https://docs.rs/miniserde"
edition = "2021"
exclude = ["benches", "build.rs"]
keywords = ["serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/miniserde"
rust-version = "1.56"

[dependencies]
itoa = "1.0"
mini-internal = { version = "=0.1.39", path = "derive" }
ryu = "1.0"

[dev-dependencies]
automod = "1.0"
indoc = "2.0"
rustversion = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[workspace]
members = ["derive", "tests/crate"]

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = ["std"]
std = []
