[package]
name = "mini-internal"
version = "0.1.27"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Derive macros for miniserde. Use the re-exports from the miniserde crate instead."
documentation = "https://docs.rs/miniserde"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/miniserde"
rust-version = "1.36"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
