[package]
name = "mini-internal"
version = "0.1.43"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Derive macros for miniserde. Use the re-exports from the miniserde crate instead."
documentation = "https://docs.rs/miniserde"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/miniserde"
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
